--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,17 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap%27%22");
+@import url("https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap%27%22%22");
 
 .fontes {
     font-size: 80px !important;
-    color: white !important;
+    color: rgb(18, 2, 54) !important;
     width: 2250px;
     height: 400px;
     border: 0px;
-    margin-right: 50px; 
+    margin-right: 50px;
+    font-family: Signika; 
 
 } 
 
+.fontes.a{
+    color: #010c3b;
+    font-family: 'Signika';
+}
+
 .textos {
-    color: #545951;
+    color: #263165;
 }
 
 .parceirosepatrocinadores {
@@ -57,7 +63,7 @@
 
 .sus-redes{
     font-size: 50px !important;
-    color: #545951;
+    color: #263165;
 }
 
 .carousel{
@@ -67,18 +73,18 @@
 }
 
 .page{
-    background: linear-gradient( #bfeb55);
+    background: linear-gradient(45deg,#88c636 , #263165 );
 }
 
 
 .page4{
-    background-color:#bfeb55;
+    background-color:#88c636;
 }
 
 #sus-titulo{
-    font-size: 70px !important;
-    color: #458766;
-    font-family: 'Signika', sans-serif;
+    font-size: 85px !important;
+    color: #263165;
+    font-family: 'Signika';
 }
 
 .card{
@@ -111,14 +117,15 @@
 }
 
 .holder {
+    background: linear-gradient(45deg,#88c636 , #263165 );
     display: flex;
     justify-content: center;
-    align-items: center;
+
 }
 
 .holder img, .holder Typography {
     position: absolute;
     font-size: 32px;
-    font-family: sans-serif;
+    font-family: Signika;
     text-align: center;
 }
