--- a/src/components/estaticos/navbar/NavBar.css
+++ b/src/components/estaticos/navbar/NavBar.css
@@ -76,7 +76,7 @@
 
 .imglogo9{
  display: block; 
- width: 40%;
+ width: 10%;
 
 }
 .imglogo8{
@@ -205,4 +205,7 @@
     margin-left: 8px;
     margin-right: 8px;
     width: 211px;
+}
+.texto {
+    color: white;
 }
