--- a/src/components/postagens/modalPostagem/ModalPostagem.css
+++ b/src/components/postagens/modalPostagem/ModalPostagem.css
@@ -3,6 +3,6 @@
 }
 
 .btnModal{
-    border-color:blue !important;
-    background-color:blue !important;
+    border-color:white !important;
+    background-color:white !important;
 }
